<resources>
    <string name="app_name">跑腿</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_address">添加地址</string>
    <string name="about_app">成员分工如下：\n
        覃其洲：\n
        彭新宇：\n
        王云峰：\n
        韩昕峰：\n
    </string>
    <string name="app_version">乐知版本：1.0</string>
    <string name="task_address">任务地址</string>
    <string name="my_address">收货地址</string>
    <string name="todo">TODO</string>
    <string name="accept">接受</string>
    <string name="price">价格</string>
    <string name="heading_code">在这里识别码:</string>
    <string name="goodsname">商品名:</string>
    <string name="amount">数量:</string>
    <string name="input_descrition">在这里输入描述:</string>
    <string name="time">时间</string>
    <string name="example_address">to：桂林电子科技大学花江校区10栋围栏</string>
    <string name="task_description">这里是任务简介</string>
    <string name="accrpt">接受</string>


</resources>