<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:pp="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:cardBackgroundColor="#B3E6E8E7"
        pp:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/add_taskpic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/pic"
                pp:ignore="ContentDescription" />

            <TextView
                android:id="@+id/add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/add_taskpic"
                android:background="@color/white"
                android:hint="@string/input_descrition" />


            <LinearLayout
                android:id="@+id/buy_goods_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_description"
                android:layout_alignStart="@+id/add_description"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_goodsamount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"

                    android:hint="@string/amount" />

                <TextView
                    android:id="@+id/add_goodsestimation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="单价:" />
            </LinearLayout>


            <TextView
                android:id="@+id/add_goodsevidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_description"
                android:layout_alignStart="@+id/add_description"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:hint="@string/heading_code" />


<!--            <ImageView-->
<!--                android:id="@+id/delete_goods"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_alignBottom="@+id/add_taskpic"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:contentDescription="TODO"-->
<!--                android:src="@drawable/delete" />-->

            <TextView
                android:id="@+id/add_goodsname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/buy_goods_des"
                android:layout_alignBottom="@+id/add_taskpic"
                android:layout_marginEnd="80dp"
                android:background="@color/white"
                android:hint="@string/goodsname" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>