<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:pp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/title_bar_bg"
    app:ignore="NamespaceTypo"
    pp:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/task_user_portrait"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/order" />

        <ImageView
            android:id="@+id/task_type"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/task_user_portrait"
            android:src="@drawable/icon1" />


        <TextView
            android:id="@+id/task_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_type"
            android:layout_marginStart="10dp"
            android:textSize="10sp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/task_user_portrait"
            android:text="@string/task_description"
            app:ignore="SmallSp" />

        <TextView
            android:id="@+id/employer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_user_portrait"
            android:layout_marginStart="10dp"
            android:text="发单人:111" />

        <TextView
            android:id="@+id/task_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/task_user_portrait"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:maxLines="2"
            android:text="@string/time"
            android:textSize="10sp"
            app:ignore="SmallSp" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/employer"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/example_address" />

        <!--        <TextView-->
        <!--            android:id="@+id/Task_location"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/destination"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            android:layout_marginTop="5dp"-->
        <!--            android:ellipsize="end"-->
        <!--            android:maxLines="1"-->
        <!--            android:text="任务地址：桂林电子科技大学花江校区中央食堂菜鸟驿站" />-->

        <ImageView
            android:id="@+id/price_icon"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_below="@id/destination"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/price" />

        <TextView
            android:id="@+id/task_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/price_icon"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/price_icon"
            android:gravity="center_vertical"
            android:text="16.00"
            android:textColor="@color/qmui_config_color_red"
            android:textSize="20sp" />

        <com.qmuiteam.qmui.layout.QMUIButton
            android:id="@+id/task_btn_accept"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_below="@+id/destination"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/service_bg3"
            android:text="@string/accrpt"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>